[project]
name = "moleql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Pedro Guzmán", email = "pedro@subvertic.com" }
]
requires-python = ">=3.14"
dependencies = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.14.4",
]

[project.urls]
Homepage = "https://github.com/OneTesseractInMultiverse/moleql"
Issues = "https://github.com/OneTesseractInMultiverse/moleql/issues"

[build-system]
requires = ["uv_build>=0.8.23,<0.9.0"]
build-backend = "uv_build"
